# SmartMocap

./: .gitignore  README.md  apptainer.def  cam.stl  mcms_conda_env.yml  mcms_conda_env_from_history.yml  mcms_env.yml  pyproject.toml  setup.py
resources/: axis.fbx  axis.stl
src/mcms/data_scripts/: condor_h36m_j2d_det.sub  copenet_data_orb3.yml  h36m_j2d_det_cluster.py  openpose_script_rich.py  prep_rich_for_humor.py  run_pare_on_h36m.sh
src/mcms/dsets/: copenet_real.py  h36m.py  rich.py  skii2pose.py
src/mcms/eval_scripts/: eval.py  eval_glamr.py  eval_humor.py  eval_wrt_cam0.py  results_compile.py  viz static.py  viz.py
src/mcms/fitting_scripts/: airpose_config.yml  condor_fit.sub  discrete_fitting.py  fit_config.yml  fitting_full.py  fitting_full_vp_latent.py  fitting_in_latent.py  fitting_in_theta.py  fitting_in_vp_latent.py  fitting_in_vp_latent_multires.py  rich_config.yml  smartmocap_config.yml
src/mcms/models/: backbone.py  mcms.py
src/mcms/train_scripts/: condortrain.sub  fitting.py  fitting_full.py  hparams.yaml  mcms_trainer.py  tmux_script.sh
src/mcms/utils/: geometry.py  renderer.py  utils.py
src/mcms/viz_scripts/: airpose_plus_for_video.py  method_viz_pare.py  viz_glamr_comp.py  viz_humor_comp.py  viz_humor_comp_insets.py  viz_multi_expo.py  viz_overlays.py  viz_overlays_glamr_comparison.py  viz_teaser_and_res.py
src/mcms/viz_scripts/vid/: Insigths.py
